[build-system]
requires = [ "setuptools>=64", "setuptools_scm>=8" ]
build-backend = "setuptools.build_meta"

[project]
name = "apepay"
dynamic = [ "version" ]
description = "Python SDK for ApePay"
authors = [
  {name = "ApeWorX LTD", email = "admin@apeworx.io"},
]
license = { text = "Apache 2.0" }
readme = "README.md"
requires-python = ">=3.11,<4"

dependencies = [
    "eth-ape>=0.8,<1",
    "pydantic>=2.7,<3",
    # NOTE: Pinning issue w/ Ape
    "eth-typing<5",
]

[project.optional-dependencies]
bot = [
    "silverback>=0.5,<1",
]
lint = [
    "flake8",
    "black",
    "isort",
    "mypy",
]
test = [
    "ape-foundry",
]
dev = [
    "apepay[bot,lint,test]"
]

[tool.setuptools.packages.find]
where = [ "sdk/py" ]

[tool.setuptools.package-data]
apepay = [ "manifest.json", "py.typed" ]

[tool.setuptools_scm]
# NOTE: Config entry needed for this plugin to function

[tool.black]
line-length = 100
target-version = [ "py311" ]
include = '\.pyi?$'
exclude = 'node_modules|migrations|build/|buck-out/|dist/|_build/|\.git/|\.hg/|\.mypy_cache/|\.tox/|\.venv/'

[tool.isort]
line_length = 100
force_grid_wrap = 0
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true
src_paths = ["scripts", "tests", "sdk/py/apepay"]
